moving alone block

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>O enigma do labirinto</title>
         <link rel="icon" type="image/png" href="images/favicon.png" />
         <style>
+			#board-game td { width: 40px; height: 40px; }
+			.alone-item  { background-color: yellow; }
             .action-item { background-color: black; }
             .locked-item { background-color: gray; }
         </style>
